--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <link href="css/style.css" rel="stylesheet"/>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>collaboration</title>
 </head>
 <body>
-    
+    <img  width="300" src="images/andrea.jpg" alt="andrea">
+   <h1>this is collaboration</h1> 
 </body>
 </html>
