--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
     <img  width="300" src="images/andrea.jpg" alt="andrea">
    <h1>this is collaboration</h1> 
+   <img src="images/andrea.jpg" alt="ghfgjj">
 </body>
 </html>
